--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,11 +3,10 @@
     <th>Artist</th>
     <th>Title</th>
     <th>Version</th>
-    <th>Original album</th>
-    <th>Original year</th>
-    <th>Version album</th>
-    <th>Version year</th>
+    <th>Tuning</th>
+    <th>Capo</th>
     <th>Chords</th>
+    <th>Parts</th>
     <th></th>
     <th></th>
     <th></th>
@@ -18,12 +17,10 @@
     <td><%= song.artist %></td>
     <td><%= song.title %></td>
     <td><%= song.version %></td>
-    <td><%= song.original_album %></td>
-    <td><%= song.original_year %></td>
-    <td><%= song.version_album %></td>
-    <td><%= song.version_year %></td>
-    <td><%= song.special_notes %></td>
+    <td><%= song.tuning %></td>
+    <td><%= song.capo %></td>
     <td><%= song.chords %></td>
+    <td><%= song.parts %></td>
     <td><%= link_to 'Show', song %></td>
     <td><%= link_to 'Edit', edit_song_path(song) %></td>
     <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
