Updated design per king vince's request

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,2 @@
-<h1><%= image_tag 'guitar.jpg' %> The Guitar Lab</h1>
+<span class="big">GuitarLab</span>
 <%= link_to "Home", songs_url %> | <%= link_to 'New Song', new_song_url %>
