--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -1,6 +1,124 @@
-.container {
-	width: 960px;
-	margin: 0 auto;
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+body {font-family: 'Noto Sans', sans-serif; font-size: 12px; font-weight: 400; color: #8c8c8c;}
+
+#wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+#alphabet {
+  text-align: center;
+  padding: 10px 0 20px 0;
+}
+#alphabet li {
+  display: inline-block;
+}
+#alphabet li a {
+  padding: 10px;
+  color: #404853;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+}
+span.big {
+  text-align: center;
+  font-size: 100px;
+}
+form#sort {
+  margin-top: 20px;
+  color: #8c8c8c;
+}
+form#sort input[type="radio"] {
+  margin-left: 20px;
+}
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  width: 960px;
+}
+th, td {
+  vertical-align: top;
+}
+th {
+  background: #404853;
+  background: linear-gradient(#687587, #404853);
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  color: #fff;
+  padding: 9px 8px 7px 8px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.6);
+  text-transform: uppercase;
+}
+th.song, th.tuning, th.capo, th.chords{
+  padding: 12px 20px 10px 20px;
+  text-align: center;
+}
+th.song {
+  border-left: 0;
+}
+th.chords {
+  border-right: 0;
+}
+td {
+  padding: 8px;
+}
+tbody td {
+  border-bottom: 1px solid #c6c9cc;
+  border-left: 1px solid #e4e7eb;
+  border-right: 1px solid rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
+}
+tbody tr:nth-child(even) td {
+  background: #e8eae9;
+  background: linear-gradient(#f7faf9, #e8eae9);
+  border-left: 1px solid #d5d8db;
+}
+tbody td.song, tbody tr:nth-child(even) td.song {
+  border-left: 1px solid #c6c9cc;
+}
+tbody td.song a {
+  color: #404853;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+}
+tbody td.tuning, tbody td.capo, tbody td.chords{
+  vertical-align: middle;
+}
+tbody td.tuning, tbody td.capo, tbody td.chords{
+  text-align: center;
+}
+tbody td.chords {
+  border-right: 1px solid #c6c9cc;
+}
+tfoot td {
+  border-bottom: 1px solid #c6c9cc;
+  border-left: 1px solid #e4e7eb;
+  border-right: 1px solid rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
+  text-align: right;
+}
+tfoot td.title {
+  border-left: 1px solid #c6c9cc;
+}
+tfoot td.capo {
+  border-right: 1px solid #c6c9cc;
+}
+.in {
+  color: #00b515;
+}
+.out {
+  color: #b50000;
+}
+span {
+  color: #8c8c8c;
+  display: block;
+  font-size: 12px;
+  font-weight: normal;
 }
 
-img { width: 30%; }
+div.container {
+	margin: 0 auto;
+	width: 960px;
+}
