--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,29 +1,55 @@
-<table>
-  <tr>
-    <th>Artist</th>
-    <th>Title</th>
-    <th>Version</th>
-    <th>Tuning</th>
-    <th>Capo</th>
-    <th>Chords</th>
-    <th>Parts</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+    <div id="wrapper">
+      <form id="sort">
+        BROWSE: <input type="radio" name="sort" value="artist"><label>ARTIST</label><input type="radio" name="sort" value="title"><label>TITLE</label>
+      </form>
+        <ul id="alphabet">
+          <li><a href="#">ALL</a></li>
+          <li><a href="#">#</a></li>
+          <li><a href="#">A</a></li>
+          <li><a href="#">B</a></li>
+          <li><a href="#">C</a></li>
+          <li><a href="#">D</a></li>
+          <li><a href="#">E</a></li>
+          <li><a href="#">F</a></li>
+          <li><a href="#">G</a></li>
+          <li><a href="#">H</a></li>
+          <li><a href="#">I</a></li>
+          <li><a href="#">J</a></li>
+          <li><a href="#">K</a></li>
+          <li><a href="#">L</a></li>
+          <li><a href="#">M</a></li>
+          <li><a href="#">N</a></li>
+          <li><a href="#">O</a></li>
+          <li><a href="#">P</a></li>
+          <li><a href="#">Q</a></li>
+          <li><a href="#">R</a></li>
+          <li><a href="#">S</a></li>
+          <li><a href="#">T</a></li>
+          <li><a href="#">U</a></li>
+          <li><a href="#">V</a></li>
+          <li><a href="#">W</a></li>
+          <li><a href="#">X</a></li>
+          <li><a href="#">Y</a></li>
+          <li><a href="#">Z</a></li>
+        </ul> 
+        
+        <table>
+          <thead>
+            <tr>
+              <th class="song" colspan="1">Song</th>
+              <th class="tuning">Tuning</th>
+              <th class="capo">Capo</th>
+              <th class="chords">Chords</th>
+           </tr>
+          </thead>
 
-<% @songs.each do |song| %>
-  <tr>
-    <td><%= song.artist %></td>
-    <td><%= song.title %></td>
-    <td><%= song.version %></td>
-    <td><%= song.tuning %></td>
-    <td><%= song.capo %></td>
-    <td><%= song.chords %></td>
-    <td><%= song.parts %></td>
-    <td><%= link_to 'Show', song %></td>
-    <td><%= link_to 'Edit', edit_song_path(song) %></td>
-    <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+        <% @songs.each do |song| %>
+          <tr>
+            <td class="song"><%= link_to song.title, song %> <span><%= song.artist %></span></td>
+            <td class="tuning"><%= song.tuning %></td>
+            <td class="capo"><%= song.capo %></td>
+            <td class="chords"><%= song.chords %></td>
+          </tr>
+        <% end %>
+        </table>         
+</div><!--wrapper-->
