Updated songs index design

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,37 +1,39 @@
-    <div id="wrapper">
-      <form id="sort">
-        BROWSE: <input type="radio" name="sort" value="artist"><label>ARTIST</label><input type="radio" name="sort" value="title"><label>TITLE</label>
-      </form>
-        <ul id="alphabet">
-          <li><a href="#">ALL</a></li>
-          <li><a href="#">#</a></li>
-          <li><a href="#">A</a></li>
-          <li><a href="#">B</a></li>
-          <li><a href="#">C</a></li>
-          <li><a href="#">D</a></li>
-          <li><a href="#">E</a></li>
-          <li><a href="#">F</a></li>
-          <li><a href="#">G</a></li>
-          <li><a href="#">H</a></li>
-          <li><a href="#">I</a></li>
-          <li><a href="#">J</a></li>
-          <li><a href="#">K</a></li>
-          <li><a href="#">L</a></li>
-          <li><a href="#">M</a></li>
-          <li><a href="#">N</a></li>
-          <li><a href="#">O</a></li>
-          <li><a href="#">P</a></li>
-          <li><a href="#">Q</a></li>
-          <li><a href="#">R</a></li>
-          <li><a href="#">S</a></li>
-          <li><a href="#">T</a></li>
-          <li><a href="#">U</a></li>
-          <li><a href="#">V</a></li>
-          <li><a href="#">W</a></li>
-          <li><a href="#">X</a></li>
-          <li><a href="#">Y</a></li>
-          <li><a href="#">Z</a></li>
-        </ul> 
+<div id="wrapper">
+    <ul id="alphabet">
+      <li>ARTIST:</li>
+      <li><a href="#">ALL</a></li>
+      <li><a href="#">#</a></li>
+      <li><a href="#">A</a></li>
+      <li><a href="#">B</a></li>
+      <li><a href="#">C</a></li>
+      <li><a href="#">D</a></li>
+      <li><a href="#">E</a></li>
+      <li><a href="#">F</a></li>
+      <li><a href="#">G</a></li>
+      <li><a href="#">H</a></li>
+      <li><a href="#">I</a></li>
+      <li><a href="#">J</a></li>
+      <li><a href="#">K</a></li>
+      <li><a href="#">L</a></li>
+      <li><a href="#">M</a></li>
+      <li><a href="#">N</a></li>
+      <li><a href="#">O</a></li>
+      <li><a href="#">P</a></li>
+      <li><a href="#">Q</a></li>
+      <li><a href="#">R</a></li>
+      <li><a href="#">S</a></li>
+      <li><a href="#">T</a></li>
+      <li><a href="#">U</a></li>
+      <li><a href="#">V</a></li>
+      <li><a href="#">W</a></li>
+      <li><a href="#">X</a></li>
+      <li><a href="#">Y</a></li>
+      <li><a href="#">Z</a></li>
+    </ul> 
+    <br class="clear" />
+  <%= link_to 'New Song', new_song_url, class: 'button', style: 'float: left;' %>
+  <input type="search" size="40" placeholder="Search..." class="search"></input>
+  <br class="clear" />
         
         <table>
           <thead>
@@ -53,3 +55,7 @@
         <% end %>
         </table>         
 </div><!--wrapper-->
+
+
+
+
