--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -1,32 +1,58 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 body {font-family: 'Noto Sans', sans-serif; font-size: 12px; font-weight: 400; color: #8c8c8c;}
-
+.clear {clear: both;}
+a {text-decoration: none;}
 #wrapper {
   width: 960px;
   margin: 0 auto;
 }
 #alphabet {
   text-align: center;
-  padding: 10px 0 20px 0;
+  padding: 10px 0 0px 0;
 }
 #alphabet li {
   display: inline-block;
+  color: #8c8c8c;
+  font-size: 14px;
+  line-height: 20px;
 }
 #alphabet li a {
-  padding: 10px;
+  padding: 5px 9px;
   color: #404853;
-  text-decoration: none;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
+}
+#alphabet li a:hover, a:active {
+  color: #ffffff;
+  background-color: #404853;
+}
+.button {
+  color: #404853;
+  font-weight: 700;
+  text-transform: uppercase;
+  background: #e8eae9;
+  background: linear-gradient(#f7faf9, #e8eae9);
+  border: 1px solid #d5d8db;
+  padding: 6px 10px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+}
+.search {
+  float: right;
 }
 span.big {
   text-align: center;
   font-size: 100px;
 }
 form#sort {
-  margin-top: 20px;
+  margin-top: 10px;
   color: #8c8c8c;
+  width: 500px;
+  float: left;
+
 }
 form#sort input[type="radio"] {
   margin-left: 20px;
@@ -35,6 +61,7 @@ table {
   border-collapse: separate;
   border-spacing: 0;
   width: 960px;
+  margin-top: 10px;
 }
 th, td {
   vertical-align: top;
@@ -78,7 +105,6 @@ tbody td.song, tbody tr:nth-child(even) td.song {
 }
 tbody td.song a {
   color: #404853;
-  text-decoration: none;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
