--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,1 @@
-<span class="big">GuitarLab</span>
-<%= link_to "Home", songs_url %> | <%= link_to 'New Song', new_song_url %>
+<%= link_to '<span class="big">GuitarLab</span>'.html_safe, songs_url %>
