--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -153,7 +153,7 @@ span.title {
   border-collapse: separate;
   border-spacing: 0;
   width: 300px;
-  margin-top: 10px;
+  padding: 10px 0;
 }
 #info-wrapper table td {
   padding: 10px 8px;
@@ -186,6 +186,14 @@ span.notes {
   display: block;
   max-width: 280px;
   padding-top: 5px;
+}
+#spotify {
+  width: 300px;
+  height: 80px;
+  padding: 10px 0;
+}
+#buttons {
+  padding-top: 10px;
 }
 #copyright {
   display: block;
