Updated new_song link on index page

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -31,7 +31,7 @@
           <li><a href="#">Z</a></li>
         </ul> 
         <br class="clear" />
-      <a href="/new" class="button" style="float: left;">New Song</a>
+      <%= link_to 'New Song', new_song_url, class: 'button', style: 'float: left;'%>
       <input type="search" size="40" placeholder="Search..." class="search"></input>
       <br class="clear" />
       
