--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -56,8 +56,8 @@
     <%= f.text_field :version_year %>
   </div>
   <div class="field">
-    <%= f.label :special_notes %><br />
-    <%= f.text_field :special_notes %>
+    <%= f.label :notes %><br />
+    <%= f.text_area :notes %>
   </div>
   <div class="field">
     <%= f.label :chords %><br />
@@ -70,6 +70,10 @@
   <div class="field">
     <%= f.label :url %><br />
     <%= f.text_field :url %>
+  </div>
+  <div class="field">
+    <%= f.label :spotify_url %><br />
+    <%= f.text_field :spotify_url %>
   </div>
   <div class="actions">
     <%= f.submit %>
