Change to version_artist, filter by letter, display version_artist, tr rows clickable

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :version %><br />
-    <%= f.text_field :version %>
+    <%= f.label :version_artist %><br />
+    <%= f.text_field :version_artist %>
   </div>
   <div class="field">
     <%= f.label :tuning %><br />
