--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -91,6 +91,11 @@ tbody td {
   border-right: 1px solid rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
 }
+
+table#index tbody tr {
+	cursor: pointer;
+}
+
 tbody tr:nth-child(even) td {
   background: #e8eae9;
   background: linear-gradient(#f7faf9, #e8eae9);
