--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing song</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @song %> |
-<%= link_to 'Back', songs_path %>
+<fieldset>
+  <legend>Editing Song</legend>
+  <%= render 'form' %>
+</fieldset>
