--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New song</h1>
+<fieldset>
+  <legend>New Song</legend>
+  <%= render 'form' %>
+</fieldset>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', songs_path %>
