--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,2 @@
 <div id="copyright">
-  &copy; Copyright 2013 - GuitarLab is a collaboration between <%= link_to 'Brendan Hennessy', 'http://launchpadlab.com/' %> and <%= link_to 'Vince Amatuzzi', 'http://about.me/vinceamatuzzi' %></div>
+  &copy; Copyright <%= DateTime.now().strftime('%Y') %> - GuitarLab is a collaboration between <%= link_to 'Brendan Hennessy', 'http://launchpadlab.com/' %> and <%= link_to 'Vince Amatuzzi', 'http://vinceandvince.com' %></div>
